--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>Percentage Calculator</title>
     </head>
 
     <body>
-
+        <h1>Percentage Calculators</h1>
+        <p>X is what % of Y?</p>
+        <form action="">
+            <input type="text"> is what percent of
+            <input type="text"> <br><br>
+            <input type="submit" value="Calculate">
+        </form>
+        <h3>Result: 100%</h3>
+        <script type="text/javascript" src="calc.js"></script>
     </body>
 
 </html>
