--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <h1>Percentage Calculators</h1>
         <p>X is what % of Y?</p>
         <form action="">
-            <input type="text"> is what percent of
-            <input type="text"> <br><br>
+            <input type="text" id="numField1"> is what percent of
+            <input type="text" id="numField2"> <br><br>
             <input type="submit" value="Calculate">
         </form>
-        <h3>Result: 100%</h3>
+        <h3 id="resultField">Result: 100%</h3>
         <script type="text/javascript" src="calc.js"></script>
     </body>
 
