--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Percentage Calculators</h1>
         <p>X is what % of Y?</p>
-        <form action="">
+        <form id="xIsWhatPercentOfY">
             <input type="text" id="numField1"> is what percent of
             <input type="text" id="numField2"> <br><br>
             <input type="submit" value="Calculate">
