--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
          <!--               FORM 2                  -->
         <p>What is Y% of X?</p>
         <form id="whatIsY%OfX">
+            <span>What is</span>
             <input type="text" id="calc2NumField1"> percent of
             <input type="text" id="calc2NumField2"> <br><br>
             <input type="submit" value="Calculate">
@@ -36,8 +37,10 @@
          <!--               FORM 3                  -->
         <p>X is Y% of what?</p>
         <form id="xIsY%OfWhat">
-            <input type="text" id="calc3NumField1"> is what percent of
-            <input type="text" id="calc3NumField2"> <br><br>
+            <input type="text" id="calc3NumField1"> is
+            <input type="text" id="calc3NumField2">
+            <span>percent of what?</span>
+            <br><br>
             <input type="submit" value="Calculate">
         </form>
         <h3 id="calc3ResultField">Result: 100%</h3>
