--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <p>X is what % of Y?</p>
         <form id="xIsWhatPercentOfY">
             <input type="text" id="calc1NumField1"> is what percent of
-            <input type="text" id="calc1NumField2"> <br><br>
+            <input type="text" id="calc1NumField2"> 
+            <span>?</span>
+            <br><br>
             <input type="submit" value="Calculate">
         </form>
         <h3 id="calc1ResultField">Result:</h3>
@@ -26,7 +28,9 @@
         <form id="whatIsY%OfX">
             <span>What is</span>
             <input type="text" id="calc2NumField1"> percent of
-            <input type="text" id="calc2NumField2"> <br><br>
+            <input type="text" id="calc2NumField2"> 
+            <span>?</span>
+            <br><br>
             <input type="submit" value="Calculate">
         </form>
         <h3 id="calc2ResultField">Result:</h3>
@@ -43,7 +47,7 @@
             <br><br>
             <input type="submit" value="Calculate">
         </form>
-        <h3 id="calc3ResultField">Result: 100%</h3>
+        <h3 id="calc3ResultField">Result:</h3>
 
         <br>
         <hr>
@@ -51,11 +55,14 @@
         <!--               FORM 4                  -->
         <p>What % of X is Y?</p>
         <form id="what%OfXIsY">
-            <input type="text" id="calc4NumField1"> is what percent of
-            <input type="text" id="calc4NumField2"> <br><br>
+            <span>What percent of</span>
+            <input type="text" id="calc4NumField1"> is
+            <input type="text" id="calc4NumField2"> 
+            <span>?</span>
+            <br><br>
             <input type="submit" value="Calculate">
         </form>
-        <h3 id="calc4ResultField">Result: 100%</h3>
+        <h3 id="calc4ResultField">Result:</h3>
         
         <br>
         <hr>
@@ -63,11 +70,13 @@
         <!--               FORM 5                  -->
         <p>X% of what is Y?</p>
         <form id="x%OfWhatIsY">
-            <input type="text" id="calc5NumField1"> is what percent of
-            <input type="text" id="calc5NumField2"> <br><br>
+            <input type="text" id="calc5NumField1"> percent of what is
+            <input type="text" id="calc5NumField2"> 
+            <span>?</span>
+            <br><br>
             <input type="submit" value="Calculate">
         </form>
-        <h3 id="calc5ResultField">Result: 100%</h3>
+        <h3 id="calc5ResultField">Result:</h3>
 
         <br>
         <hr>
@@ -75,11 +84,13 @@
         <!--               FORM 6                  -->
         <p>Y% of X is what?</p>
         <form id="y%OfXIsWhat">
-            <input type="text" id="calc6NumField1"> is what percent of
-            <input type="text" id="calc6NumField2"> <br><br>
+            <input type="text" id="calc6NumField1"> percent of
+            <input type="text" id="calc6NumField2"> 
+            <span>is what?</span>
+            <br><br>
             <input type="submit" value="Calculate">
         </form>
-        <h3 id="calc6ResultField">Result: 100%</h3>
+        <h3 id="calc6ResultField">Result:</h3>
        
         <script type="text/javascript" src="calc.js"></script>
     </body>
