--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
         <!--               FORM 1                  -->
         <div class="form">
             <div>
-                <h3 class="formHeader">X is what % of Y?</h3>
+                <!-- <h3 class="formHeader">X is what % of Y?</h3> -->
             </div>
             <form id="xIsWhatPercentOfY">
-                <input type="text" id="calc1NumField1"> is what percent of
-                <input type="text" id="calc1NumField2"> 
+                <input class="fieldInput" type="text" id="calc1NumField1" autocomplete="off">
+                <span>is what percent of</span>
+                <input class="fieldInput" type="text" id="calc1NumField2" autocomplete="off"> 
                 <span>?</span>
                 <br><br>
-                <input type="submit" value="Calculate">
-                <input type="text" id="calc1ResultField" value="" readonly>
+                <input type="submit" value="CALCULATE">
+                <input class="fieldInput" type="text" id="calc1ResultField" value="" readonly>
                 <span>%</span>
             </form>
         </div>
@@ -31,11 +32,11 @@
             <p>What is Y% of X?</p>
             <form id="whatIsY%OfX">
                 <span>What is</span>
-                <input type="text" id="calc2NumField1"> percent of
-                <input type="text" id="calc2NumField2"> 
+                <input type="text" id="calc2NumField1" autocomplete="off"> percent of
+                <input type="text" id="calc2NumField2" autocomplete="off"> 
                 <span>?</span>
                 <br><br>
-                <input type="submit" value="Calculate">
+                <input type="submit" value="CALCULATE">
             </form>
             <h3 id="calc2ResultField">Result:</h3>
         </div>
@@ -44,11 +45,11 @@
          <div class="form">
             <p>X is Y% of what?</p>
             <form id="xIsY%OfWhat">
-                <input type="text" id="calc3NumField1"> is
-                <input type="text" id="calc3NumField2">
+                <input type="text" id="calc3NumField1" autocomplete="off"> is
+                <input type="text" id="calc3NumField2" autocomplete="off">
                 <span>percent of what?</span>
                 <br><br>
-                <input type="submit" value="Calculate">
+                <input type="submit" value="CALCULATE">
             </form>
             <h3 id="calc3ResultField">Result:</h3>
         </div>
@@ -58,11 +59,11 @@
             <p>What % of X is Y?</p>
             <form id="what%OfXIsY">
                 <span>What percent of</span>
-                <input type="text" id="calc4NumField1"> is
-                <input type="text" id="calc4NumField2"> 
+                <input type="text" id="calc4NumField1" autocomplete="off"> is
+                <input type="text" id="calc4NumField2" autocomplete="off"> 
                 <span>?</span>
                 <br><br>
-                <input type="submit" value="Calculate">
+                <input type="submit" value="CALCULATE">
             </form>
             <h3 id="calc4ResultField">Result:</h3>
         </div>
@@ -71,11 +72,11 @@
         <div class="form">
             <p>X% of what is Y?</p>
             <form id="x%OfWhatIsY">
-                <input type="text" id="calc5NumField1"> percent of what is
-                <input type="text" id="calc5NumField2"> 
+                <input type="text" id="calc5NumField1" autocomplete="off"> percent of what is
+                <input type="text" id="calc5NumField2" autocomplete="off"> 
                 <span>?</span>
                 <br><br>
-                <input type="submit" value="Calculate">
+                <input type="submit" value="CALCULATE">
             </form>
             <h3 id="calc5ResultField">Result:</h3>
         </div>
@@ -84,11 +85,11 @@
         <div class="form">
             <p>Y% of X is what?</p>
             <form id="y%OfXIsWhat">
-                <input type="text" id="calc6NumField1"> percent of
-                <input type="text" id="calc6NumField2"> 
+                <input type="text" id="calc6NumField1" autocomplete="off"> percent of
+                <input type="text" id="calc6NumField2" autocomplete="off"> 
                 <span>is what?</span>
                 <br><br>
-                <input type="submit" value="Calculate">
+                <input type="submit" value="CALCULATE">
             </form>
             <h3 id="calc6ResultField">Result:</h3>
         </div>
